# rinha-de-backend-2024-q1

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  env  env.tmpl  init.sql  nginx.conf  postgresql.conf  start.sh
api/: .env  Cargo.toml
api/server/: Cargo.toml
api/server/src/: lib.rs
api/server/src/handlers/: cliente.rs  transacao.rs
api/server/src/models/: cliente.rs  mod.rs  transacao.rs
api/server/src/utils/: app_state.rs  env.rs  mod.rs  telemetry.rs
api/src/: main.rs
docker/: api.Dockerfile
