[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
actix-web = "4"
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }
tracing = "0.1.37"
tracing-actix-web = { version = "0.7.6", features = [
    "opentelemetry_0_19",
    "emit_event_on_error",
] }
actix-cors = "0.6.4"
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
chrono = { version = "0.4.26", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
opentelemetry = { version = "0.20.0", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = "0.20.0"
tracing-bunyan-formatter = "0.3.9"
opentelemetry-otlp = "0.13.0"
tower = "0.4.13"
init-tracing-opentelemetry = { version = "0.13.1", features = [
    "otlp",
    "tracing_subscriber_ext",
] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
