[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
actix-web = "4"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing = "0.1"
tracing-actix-web = { version = "0.7", features = [
    "opentelemetry_0_19",
    "emit_event_on_error",
] }
actix-cors = "0.6"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.26", features = ["serde"] }
tokio = { version = "1.36", features = ["full"] }
opentelemetry = { version = "0.20", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = "0.20"
tracing-bunyan-formatter = "0.3"
init-tracing-opentelemetry = { version = "0.13", features = [
    "tracing_subscriber_ext",
] }
uuid = { version = "1.4", features = ["v4", "fast-rng", "serde"] }
mime = "0.3.17"
bb8-postgres = { version = "0.8.1", features = ["with-chrono-0_4"] }
bb8 = "0.8.3"
futures-util = "0.3.30"
postgres-types = { version = "0.2.6", features = ["derive"] }
